nesc-frontend/src/test/resources/lexer/invalidtokens/InvalidCommentEOF.nc
configuration InvalidCommentEOF {
} implementation {
/* this is
 * an unterminated
 * comment